[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/anima/visual-editor/editor/AnimaFramesEditor.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/visual-editor/editor/AnimaAnimation.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/anima/visual-editor/editor/AnimaAddFrame.tscn" type="PackedScene" id=3]

[node name="FramesEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 512, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="AnimaRectangle" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 512, 300 )
color = Color( 0.0235294, 0.0745098, 0.117647, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="AnimaRectangle"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimaAnimation" parent="AnimaRectangle/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 1024.0

[node name="ScrollContainer" type="ScrollContainer" parent="AnimaRectangle/VBoxContainer"]
margin_top = 46.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="AnimaRectangle/VBoxContainer/ScrollContainer"]
margin_right = 408.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AnimaRectangle/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 466.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="FramesContainer1" type="HBoxContainer" parent="AnimaRectangle/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 512.0
margin_bottom = 466.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="FramesContainer2" type="VBoxContainer" parent="AnimaRectangle/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 466.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="AnimaAddFrame" parent="AnimaRectangle/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 474.0
margin_right = 1024.0
margin_bottom = 554.0
rect_pivot_offset = Vector2( 180, 288 )

[connection signal="animation_updated" from="AnimaRectangle/VBoxContainer/AnimaAnimation" to="." method="_on_AnimaAnimation_animation_updated"]
[connection signal="change_editor_position" from="AnimaRectangle/VBoxContainer/AnimaAnimation" to="." method="_on_AnimaAnimation_change_editor_position"]
[connection signal="collapse_all" from="AnimaRectangle/VBoxContainer/AnimaAnimation" to="." method="_on_AnimaAnimation_collapse_all"]
[connection signal="expand_all" from="AnimaRectangle/VBoxContainer/AnimaAnimation" to="." method="_on_AnimaAnimation_expand_all"]
[connection signal="preview_animation" from="AnimaRectangle/VBoxContainer/AnimaAnimation" to="." method="_on_preview_animation"]
[connection signal="add_delay" from="AnimaRectangle/VBoxContainer/ScrollContainer/VBoxContainer/AnimaAddFrame" to="." method="_on_AnimaAddFrame_add_delay"]
[connection signal="add_frame" from="AnimaRectangle/VBoxContainer/ScrollContainer/VBoxContainer/AnimaAddFrame" to="." method="_on_AnimaAddFrame_add_frame"]
